Fix horizontal scroll

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -60,6 +60,7 @@ a:hover {
   width: 75%;
   border-radius: 50%;
 }
+
 .wrapper {
   display: flex;
   color: white;
@@ -69,7 +70,8 @@ a:hover {
   flex: 1;
   background: #242424;
   height:100vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .grid {
@@ -122,6 +124,7 @@ ul > a > li {
   .wrapper{
     display: block;
   }
+  
   .main {
     display: block;
     overflow: auto;
